Fix heading spacing for Design Checklist section in postup.html to enhance responsiveness

--- a/src/scss/postup/_day-04.scss
+++ b/src/scss/postup/_day-04.scss
@@ -10,6 +10,10 @@
 	}
 }
 
+.design-checklist-heading {
+	margin-top: 0;
+}
+
 @include breakpoint(med) {
 	.design-checklist {
 		display: flex;
